filter project specific APIs